--- a/www/wp-content/themes/ss_theme/theme/style.css
+++ b/www/wp-content/themes/ss_theme/theme/style.css
@@ -1627,6 +1627,7 @@ h6,
 .gform_wrapper .gform-field-label {
   margin-bottom: 0.25rem;
   display: block;
+  font-family: Poppins, sans-serif;
   font-size: 0.875rem;
   line-height: 1.25rem;
   --tw-text-opacity: 1;
@@ -2189,6 +2190,11 @@ h6,
 .gform_wrapper .gfield .name_last:before {
     bottom: 14px;
   }
+}
+
+.gform_wrapper .gfield input,
+.gform_wrapper .gfield textarea {
+  font-family: Poppins, sans-serif;
 }
 
 /**
