87: Header and Privacy Policy page style and content updated

--- a/www/wp-content/themes/ss_theme/tailwind/custom/base.css
+++ b/www/wp-content/themes/ss_theme/tailwind/custom/base.css
@@ -84,3 +84,9 @@ h6,
 .h6 {
 	@apply text-base;
 }
+
+.page-content > *, .entry-content > *,
+.page-title, .entry-title {
+	@apply
+	!max-w-full;
+}
