--- a/www/wp-content/themes/ss_theme/theme/style.css
+++ b/www/wp-content/themes/ss_theme/theme/style.css
@@ -867,6 +867,11 @@ h6,
   line-height: 1.5rem;
 }
 
+.page-content > *, .entry-content > *,
+.page-title, .entry-title {
+  max-width: 100% !important;
+}
+
 /**
  * This injects Tailwind's component classes and any component classes
  * registered by plugins, then adds custom component classes.
@@ -1508,7 +1513,7 @@ h6,
   text-align: center;
   font-size: 1.25rem;
   line-height: 1.75rem;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 1 !important;
   text-decoration-line: none;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -1535,6 +1540,7 @@ h6,
 
 @media (min-width: 1024px) {
   .btn {
+    height: 60px;
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
@@ -1879,7 +1885,7 @@ h6,
   text-align: center;
   font-size: 1.25rem;
   line-height: 1.75rem;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 1 !important;
   text-decoration-line: none;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -1906,6 +1912,7 @@ h6,
 
 @media (min-width: 1024px) {
   .gform_wrapper .gform_button {
+    height: 60px;
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
@@ -2289,8 +2296,24 @@ h6,
   visibility: visible;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .z-\[1\] {
@@ -2308,10 +2331,6 @@ h6,
 
 .mb-0 {
   margin-bottom: 0px;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 
 .mb-2 {
@@ -2366,6 +2385,14 @@ h6,
   height: 1rem;
 }
 
+.h-auto {
+  height: auto;
+}
+
+.h-full {
+  height: 100%;
+}
+
 .w-4 {
   width: 1rem;
 }
@@ -2374,8 +2401,8 @@ h6,
   width: 100%;
 }
 
-.max-w-\[698px\] {
-  max-width: 698px;
+.max-w-\[198px\] {
+  max-width: 198px;
 }
 
 .max-w-none {
@@ -2426,10 +2453,6 @@ h6,
 
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
 }
 
 .gap-x-2 {
@@ -2499,10 +2522,6 @@ h6,
   border-color: rgb(0 59 62 / 0.2);
 }
 
-.border-white\/15 {
-  border-color: rgb(255 255 255 / 0.15);
-}
-
 .bg-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(51 51 51 / var(--tw-bg-opacity, 1));
@@ -2538,6 +2557,14 @@ h6,
 
 .bg-center {
   background-position: center;
+}
+
+.bg-bottom {
+  background-position: bottom;
+}
+
+.bg-top {
+  background-position: top;
 }
 
 .bg-no-repeat {
@@ -2604,8 +2631,24 @@ h6,
   padding-top: 3rem;
 }
 
+.pt-44 {
+  padding-top: 11rem;
+}
+
+.pt-7 {
+  padding-top: 1.75rem;
+}
+
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pt-\[176px\] {
+  padding-top: 176px;
+}
+
+.pt-\[164px\] {
+  padding-top: 164px;
 }
 
 .text-center {
@@ -2855,6 +2898,22 @@ h6,
   right: 1rem;
 }
 
+.before\:h-6::before {
+  content: var(--tw-content);
+  height: 1.5rem;
+}
+
+.before\:w-6::before {
+  content: var(--tw-content);
+  width: 1.5rem;
+}
+
+.before\:text-xs::before {
+  content: var(--tw-content);
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .before\:content-\[\'\\e901\'\]::before {
   --tw-content: '\e901';
   content: var(--tw-content);
@@ -2886,10 +2945,6 @@ h6,
     display: none;
   }
 
-  .max-md\:max-w-40 {
-    max-width: 10rem;
-  }
-
   .max-md\:flex-col {
     flex-direction: column;
   }
@@ -2918,10 +2973,6 @@ h6,
 
   .sm\:mb-0 {
     margin-bottom: 0px;
-  }
-
-  .sm\:mb-12 {
-    margin-bottom: 3rem;
   }
 
   .sm\:mb-8 {
@@ -2969,16 +3020,8 @@ h6,
 }
 
 @media (min-width: 768px) {
-  .md\:mb-16 {
-    margin-bottom: 4rem;
-  }
-
   .md\:mb-3 {
     margin-bottom: 0.75rem;
-  }
-
-  .md\:flex {
-    display: flex;
   }
 
   .md\:w-1\/2 {
@@ -3006,6 +3049,14 @@ h6,
     padding-bottom: 6rem;
   }
 
+  .md\:pt-52 {
+    padding-top: 13rem;
+  }
+
+  .md\:pt-\[176px\] {
+    padding-top: 176px;
+  }
+
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -3024,10 +3075,6 @@ h6,
 
   .lg\:mb-12 {
     margin-bottom: 3rem;
-  }
-
-  .lg\:mb-20 {
-    margin-bottom: 5rem;
   }
 
   .lg\:mb-4 {
@@ -3052,10 +3099,6 @@ h6,
 
   .lg\:w-1\/2 {
     width: 50%;
-  }
-
-  .lg\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .lg\:w-1\/5 {
@@ -3166,12 +3209,20 @@ h6,
     padding-top: 2.5rem;
   }
 
+  .lg\:pt-64 {
+    padding-top: 16rem;
+  }
+
   .lg\:pt-9 {
     padding-top: 2.25rem;
   }
 
   .lg\:pt-\[60px\] {
     padding-top: 60px;
+  }
+
+  .lg\:pt-\[198px\] {
+    padding-top: 198px;
   }
 
   .lg\:text-end {
@@ -3221,20 +3272,12 @@ h6,
     margin-bottom: 2.5rem;
   }
 
-  .xl\:mb-24 {
-    margin-bottom: 6rem;
-  }
-
   .xl\:mb-\[50px\] {
     margin-bottom: 50px;
   }
 
   .xl\:mb-\[52px\] {
     margin-bottom: 52px;
-  }
-
-  .xl\:mb-\[60px\] {
-    margin-bottom: 60px;
   }
 
   .xl\:w-\[36\%\] {
@@ -3307,9 +3350,17 @@ h6,
   }
 }
 
-.\[\&_a\]\:py-4 a {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.\[\&_a\]\:h-12 a {
+  height: 3rem;
+}
+
+.\[\&_a\]\:rounded-\[13px\] a {
+  border-radius: 13px;
+}
+
+.\[\&_a\]\:py-2 a {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .\[\&_a\]\:pl-5 a {
@@ -3330,6 +3381,10 @@ h6,
   line-height: 1.25rem;
 }
 
+.\[\&_a\]\:font-normal a {
+  font-weight: 400;
+}
+
 .\[\&_a\]\:text-inherit a {
   color: inherit;
 }
@@ -3337,19 +3392,6 @@ h6,
 .\[\&_a\]\:text-white a {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.\[\&_form\]\:rounded-2xl form {
-  border-radius: 1rem;
-}
-
-.\[\&_form\]\:bg-white form {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.\[\&_form\]\:p-1 form {
-  padding: 0.25rem;
 }
 
 .\[\&_h1\]\:mb-3\.5 h1 {
@@ -3363,11 +3405,6 @@ h6,
 
 .\[\&_h2\]\:mb-4 h2 {
   margin-bottom: 1rem;
-}
-
-.\[\&_h2\]\:text-white h2 {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 @media (min-width: 1024px) {
@@ -3500,11 +3537,6 @@ h6,
 
 .\[\&_span\]\:font-semibold span {
   font-weight: 600;
-}
-
-.\[\&_span\]\:text-primary span {
-  --tw-text-opacity: 1;
-  color: rgb(0 201 169 / var(--tw-text-opacity, 1));
 }
 
 .\[\&_span\]\:text-ss-light-gray-100 span {
