--- a/www/wp-content/themes/ss_theme/theme/style.css
+++ b/www/wp-content/themes/ss_theme/theme/style.css
@@ -1557,6 +1557,24 @@ h6,
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.btn-primary::before {
+  position: absolute;
+  right: 2rem;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9999px;
+  background-color: rgb(233 239 245 / 0.39);
+  font-family: icomoon;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  --tw-content: '\e901';
+  content: var(--tw-content);
+}
+
 .btn-primary:hover {
   --tw-border-opacity: 1;
   border-color: rgb(0 59 62 / var(--tw-border-opacity, 1));
@@ -1576,20 +1594,6 @@ h6,
 .btn-primary:active {
   border-color: rgb(0 59 62 / 0.5);
   background-color: rgb(0 59 62 / 0.5);
-}
-
-.btn-primary::before {
-  content: '\e901';
-  position: absolute;
-  right: 2rem;
-  display: flex;
-  width: 30px;
-  height: 30px;
-  align-items: center;
-  justify-content: center;
-  border-radius: 9999px;
-  background-color: #FFFFFF5E;
-  font-family: icomoon;
 }
 
 .btn-secondary {
@@ -1929,6 +1933,24 @@ h6,
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.gform_wrapper .gform_button::before {
+  position: absolute;
+  right: 2rem;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9999px;
+  background-color: rgb(233 239 245 / 0.39);
+  font-family: icomoon;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  --tw-content: '\e901';
+  content: var(--tw-content);
+}
+
 .gform_wrapper .gform_button:hover {
   --tw-border-opacity: 1;
   border-color: rgb(0 59 62 / var(--tw-border-opacity, 1));
@@ -1948,20 +1970,6 @@ h6,
 .gform_wrapper .gform_button:active {
   border-color: rgb(0 59 62 / 0.5);
   background-color: rgb(0 59 62 / 0.5);
-}
-
-.gform_wrapper .gform_button::before {
-  content: '\e901';
-  position: absolute;
-  right: 2rem;
-  display: flex;
-  width: 30px;
-  height: 30px;
-  align-items: center;
-  justify-content: center;
-  border-radius: 9999px;
-  background-color: #FFFFFF5E;
-  font-family: icomoon;
 }
 
 .gform_wrapper .gform_button {
@@ -2559,14 +2567,6 @@ h6,
   background-position: center;
 }
 
-.bg-bottom {
-  background-position: bottom;
-}
-
-.bg-top {
-  background-position: top;
-}
-
 .bg-no-repeat {
   background-repeat: no-repeat;
 }
@@ -2641,10 +2641,6 @@ h6,
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pt-\[176px\] {
-  padding-top: 176px;
 }
 
 .pt-\[164px\] {
@@ -2987,10 +2983,6 @@ h6,
     width: auto;
   }
 
-  .sm\:justify-between {
-    justify-content: space-between;
-  }
-
   .sm\:gap-6 {
     gap: 1.5rem;
   }
@@ -3217,12 +3209,12 @@ h6,
     padding-top: 2.25rem;
   }
 
-  .lg\:pt-\[60px\] {
-    padding-top: 60px;
-  }
-
   .lg\:pt-\[198px\] {
     padding-top: 198px;
+  }
+
+  .lg\:pt-\[60px\] {
+    padding-top: 60px;
   }
 
   .lg\:text-end {
